--- a/src/style/Inscription.css
+++ b/src/style/Inscription.css
@@ -11,9 +11,10 @@
     .inscripLabel input{
        margin: 20px 30px;
        width: 500px;
-       height: 30px;
-       border: 1px solid green;
+       height: 40px;
+       border: 1px solid  rgb(166, 169, 166);
        background: rgb(222, 240, 195);
+       border-radius: 25px;
     }
     .blockB{
     margin-right: 26px;
@@ -69,7 +70,7 @@
     @media screen and (max-width: 768px){
      
        .inscripLabel input{
-          width: 200px;
+          width: 220px;
           margin-top: 5px;
           }
           .inscripLabel label{
