--- a/src/style/Inscription.css
+++ b/src/style/Inscription.css
@@ -1,8 +1,13 @@
+.titleIncription{
+   display: flex;
+   justify-content: center;
+   
+}
 .containerInscription{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
+    
     }
     .inscripLabel label {
      font-size: 20px;
@@ -15,6 +20,7 @@
        border: 1px solid  rgb(166, 169, 166);
        background: rgb(222, 240, 195);
        border-radius: 25px;
+       padding-left: 20px;
     }
     .blockB{
     margin-right: 26px;
@@ -33,7 +39,7 @@
     /* bouton  */
     .insButton{
       
-       width: 100px;
+       width: 120px;
        height: 40px;
        border-radius: 25px;
        border: none;
@@ -56,6 +62,9 @@
     
     
     @media screen and (max-width: 910px){
+      .titleIncription{
+         font-size: 25px;
+      }
        .inscripLabel input{
     width: 400px;
     }
@@ -68,9 +77,12 @@
     }
     
     @media screen and (max-width: 768px){
-     
+      .titleIncription{
+         font-size: 17px;
+      }
        .inscripLabel input{
           width: 220px;
+          height: 30px;
           margin-top: 5px;
           }
           .inscripLabel label{
