--- a/src/style/Connexion.css
+++ b/src/style/Connexion.css
@@ -1,53 +1,71 @@
 .titleConnexion{
+    text-align: center;
+}
+  form {
+    background-color: #fff;
+    width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto; /* ajout de la propriété pour centrer le formulaire */
+    max-width: 500px; /* ajout d'une largeur maximale pour éviter que le formulaire ne devienne trop grand sur les grands écrans */
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"] {
+   width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #f2f2f2;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     
-}
-.connexion{
-    display: flex;
-    flex-direction: column;
-   align-items: center;
-    justify-content: center;
+  }
+
+  label {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .insButtonD {
+    background-color: #f44336;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .insButtonD:hover {
+    background-color: #c62828;
+  }
+  
+  .insButton {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .insButton:hover {
+    background-color: #388e3c;
+  }
+  .navigInscription{
     font-size: 20px;
-}
-.logpass label{
-    color: black;
-    display: flex;
-    justify-content: center;
-}
-.logpass input{
-    width: 400px;
-    height: 40px;
-    border: 1px solid  rgb(166, 169, 166);
-    background: rgb(222, 240, 195);
-    border-radius: 25px;
-    padding-left: 20px;
-}
-.logpass{
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-}
-@media screen and (max-width: 910px){
-    .titleConnexion{
-    font-size: 25px;
-    }
-    .connexion{
-    font-size: 18px;
-}
-.logpass input{
-    width: 300px;
-}
-}
-@media screen and (max-width: 768px){
-.titleConnexion{
-    font-size: 17px;
-}
-.connexion{
-    font-size: 15px;
-}
-.logpass input{
-    width: 220px;
-    height: 30px;
-}
-}
+    font-weight: 900;
+    color:#c62828;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .navigInscription:hover{
+    color: #388e3c;
+  }
+  
