--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -70,42 +70,94 @@
       color: rgb(13, 228, 124);
       font-size: 17px;
     }
-    .containerButton {
-      display: flex;
-      flex-direction: row-reverse;
-      margin-top: 30px;
-      margin-right: 20px;
+    
+    .hamburger span {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 30px;
+      background-color: #000;
+      opacity: 1;
+      left: 0;
     }
-    .hamburger,
-    .hamburger::before,
-    .hamburger::after {
-      width: 35px;
-      background: rgb(5, 74, 29);
-      height: 4px;
-      border-radius: 5px;
-      cursor: pointer;
+    
+    .hamburger span:nth-child(1) {
+      top: -2px;
     }
+    
+    .hamburger span:nth-child(2) {
+      top: 3px;
+    }
+    
+    .hamburger span:nth-child(3) {
+      top: 8px
+    }
+
+ /*--------Ouverture & ferméture du menu hamburger------------*/
+    
+.hamburger.open span:nth-child(1) {
+  width: 0%;
+}
+
+.hamburger.open span:nth-child(2) {
+  transform: rotate(45deg);
+  top:5px;
+  background: #f8285f;
+  height: 5px;
+  border-radius: 25px;
+}
+
+.hamburger.open span:nth-child(3) {
+  transform: rotate(-45deg);
+  top:5px;
+  background: #f8285f;
+  height: 5px;
+  border-radius: 25px;
+}
+   
     .hamburger {
       position: relative;
-      border: 1px;
-      background-color: rgb(5, 74, 29);
-      display: flex;
-    }
-    .hamburger::before,
-    .hamburger::after {
-      content: "";
-      position: absolute;
-    }
-    .hamburger::before {
-      transform: translateY(-8px);
-      height: 4px;
-    }
-    .hamburger::after {
-      transform: translateY(-16px);
-      height: 4px;
+      z-index: 9999;
+      display: inline-block;
+      cursor: pointer;
+      width: 35px;
+      height: 20px;
+      transition: transform 0.5s;
     }
     .menu {
-      visibility: hidden;
-      height: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.9);
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.5s ease-in-out;
+      z-index: 99;
     }
+    .menu.open {
+      opacity: 1;
+      pointer-events: auto;
+    } 
+    .menu li {
+      margin: 10px 0;
+      font-size: 17px;
+    }
+    .menu a {
+      display: block;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      color: #fff;
+      text-decoration: none;
+      transition: color 0.5s;
+    }
+    .menu a:hover {
+      color: #f8285f;
+    }
+    
   }
