--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -7,18 +7,20 @@
     margin-bottom: 20px;
   }
   .homeUl button{
-    font-size: 15px;
-    border: 4px solid rgba(219, 189, 36, 0.975);
-    border-radius: 15px;
-    padding: 5px 10px;
-    margin-top: 10px;
-    background-color: black;
-    cursor: pointer;
+    
+      background-color: #4caf50;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
   }
   
-  .inscription{
-    color: white;
+  .homeUl button:hover{
+    background-color: #388e3c;
   }
+ 
   .connexion{
     color: white;
   }
