--- a/src/style/Connexion.css
+++ b/src/style/Connexion.css
@@ -39,6 +39,9 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    display: flex;
+    float: right;
+    margin-top: 5px;
   }
   
   .insButtonD:hover {
@@ -67,5 +70,30 @@
   }
   .navigInscription:hover{
     color: #388e3c;
+  }
+
+  @media screen and (max-width: 910px){
+    .msgBienvenue{
+      font-size: 22px;
+    }
+    .insButtonD{
+font-size: 10px;
+    }
+    .titleConnexion{
+      font-size: 25px;
+    }
+  }
+
+  @media screen and (max-width: 768px){
+
+    .msgBienvenue{
+      font-size: 15px;
+    }
+    .insButtonD{
+      font-size: 8px;
+    }
+    .titleConnexion{
+      font-size: 20px;
+    }
   }
   
