--- a/src/style/PublicationOwner.css
+++ b/src/style/PublicationOwner.css
@@ -21,7 +21,9 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 14px;
     cursor: pointer;
-    
+    display: grid;
+    justify-content: space-evenly;
+      
   }
   .publication-image {
     display: flex;
@@ -41,7 +43,7 @@
   .small-title{
     font-size: 17px;
     color: black;
-    font-weight: bold;
+    font-weight: bold; 
   }
 
 .bEdit{
