--- a/src/style/PublicationOwner.css
+++ b/src/style/PublicationOwner.css
@@ -21,9 +21,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 14px;
     cursor: pointer;
-    display: grid;
-    justify-content: space-evenly;
-      
+    width: 230px;  
   }
   .publication-image {
     display: flex;
