Modifications footer, contact & publicationOwner

--- a/src/style/PublicationsList.css
+++ b/src/style/PublicationsList.css
@@ -7,8 +7,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-items: center;
 }
 
 .publication-card {
@@ -18,7 +18,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   cursor: pointer;
-  
+  max-width: 210px;
 }
 .publication-image {
   display: flex;
@@ -41,19 +41,7 @@
   font-weight: bold;
 }
 
-@media screen and (max-width: 910px){
-  .publication-container{
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 
-  }
-}
-
-@media screen and (max-width: 768px){
-  .publication-container{
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
- 
-}
 
 
 
