--- a/src/style/Connexion.css
+++ b/src/style/Connexion.css
@@ -75,6 +75,16 @@
     color: #388e3c;
     font-size: 22px;
   }
+  .resetPasswordButton{
+   
+    color: #dd0c0c;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+   font-size: 18px;
+  }
 
   @media screen and (max-width: 910px){
   
