--- a/src/style/formulaireModification.css
+++ b/src/style/formulaireModification.css
@@ -2,3 +2,17 @@
     display: flex;
     justify-content: center;
 }
+.insButtonSup{
+    background: red;
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    color: #fff;
+       height: 30px;
+       
+       border: none;
+       cursor: pointer;
+       font-size: 17px;
+       font-weight: bold;
+       
+}
