--- a/src/style/PublicationsList.css
+++ b/src/style/PublicationsList.css
@@ -15,6 +15,7 @@
   background-color: #f0f0f0;
   padding: 5px;
   border-radius: 8px;
+  border: 2px solid rgb(167, 156, 156);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   cursor: pointer;
@@ -39,6 +40,12 @@
   font-size: 17px;
   color: black;
   font-weight: bold;
+}
+
+.prix{
+  color: orangered;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 
