--- a/src/style/Enfant.css
+++ b/src/style/Enfant.css
@@ -5,3 +5,9 @@
 .conseilsUl{
     font-size: 20px;
 }
+
+@media screen and (max-width: 768px){
+    .conseilsUl{
+        font-size: 15px;
+    }
+}
